<resources>
    <string name="app_name">Helpets</string>
    <string name="title_home">Home</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_profile">Profile</string>
    <string name="title_maps">Maps</string>
    <string name="button_send">SEND</string>
    <string name="floating_getLocation">getLocation</string>
    <string name="location">LOCATION</string>
    <string name="description_icon_add_picture">image add picture</string>
    <string name="add_photo">ADD PHOTO</string>
    <string name="register">REGISTER</string>
    <string name="text_sample">1 Km Away</string>
    <string name="text_address">Jl. Tukad Balian no.179</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="edt_nomor">Masukkan nomor telepon anda</string>
    <string name="edt_alamat">Masukkan alamat anda</string>
    <string name="txt_konfirm_login">Sudah punya akun ?</string>
    <string name="edt_nama">Masukkan nama anda</string>
    <string name="logout">LOGOUT</string>
    <string name="txt_login">LOGIN</string>
    <string name="username">Username</string>
    <string name="image_detail_desc">Abandoned Pets</string>
    <string name="detail_pets_location">Jl. Tukad Balian gang jeger No.179, Renon, Denpasar  Selatan</string>
    <string name="detail_pets_uploaded_time">6 minutes ago</string>
    <string name="detail_pets_description">Numquam in veritatis ut optio ipsam sequi deserunt  assumenda. Temporibus eum est id magnam pariatur. Beatae labore autem eaque et. Ratione minus qui voluptas. Vero eum  id cum natus qui hic. Quos ab quas aspernatur quia sapiente  dignissimos. Vero laudantium quo ipsa soluta nam ducimus  incidunt error. Cupiditate molestiae qui sed rerum. Officia sit  autem eius tenetur explicabo aut. Dolorem iste est aut  perspiciatis commodi nihil. Quia fugiat molestias voluptates  dolores commodi totam. Dolore aut et dolorem in aut vero  expedita corporis. Repellendus dolorum ullam esse est et quia.</string>
    <string name="posted_by">Posted by :</string>
    <string name="detail_pets_user_post">Windah Basudara</string>
    <string name="windah_basudara">Windah Basudara</string>
    <string name="image_description">homeless_pet</string>
    <string name="ready_to_save_some_pets_today">Ready to save some pets today?</string>
    <string name="hello">Hello</string>
    <string name="chip_1">Recently</string>
    <string name="chip_2">Dogs</string>
    <string name="chip_3">Cats</string>
    <string name="text_date">00-00-0000</string>
    <string name="description">Description</string>
    <string name="cat">cat</string>
    <string name="dog">dog</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="txt_konfirm">Belum punya akun ?</string>
    <string name="txt_register">Register</string>
    <string name="edt_email">Masukkan email anda</string>
    <string name="edt_password">Masukkan password anda</string>
    <string name="create_post">CREATE POST</string>
    <string name="add_pets">Add Pets</string>
    <string name="btnDetail">Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">EDIT</string>
    <string name="update_data">UPDATE DATA</string>
    <string name="your_profile">Your Profile</string>
</resources>