<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="id.med.helpets.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_createPostActivity"
            app:destination="@id/createPostActivity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="id.med.helpets.ui.dashboard.DashboardFragment"
        android:label="@string/title_favorite"
        tools:layout="@layout/fragment_dashboard" >
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="id.med.helpets.ui.notifications.NotificationsFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="id.med.helpets.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />
    <activity
        android:id="@+id/createPostActivity"
        android:name="id.med.helpets.ui.createpost.CreatePostActivity"
        android:label="activity_create_post"
        tools:layout="@layout/activity_create_post" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="id.med.helpets.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>