<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="25dp"
        android:lineSpacingExtra="1sp"
        android:text="@string/hello"
        android:textColor="@color/blue_dark"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_display_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="17dp"
        android:lineSpacingExtra="1sp"
        android:text="@string/windah_basudara"
        android:textColor="@color/merah"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="1sp"
        android:text="@string/ready_to_save_some_pets_today"
        android:textColor="@color/blue_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tv_display_username" />


    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_nearest"
            style="@style/CustomChipStyle"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/chip_1"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_dogs"
            style="@style/CustomChipStyle"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:text="@string/chip_2"
            android:textAlignment="center" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_cats"
            style="@style/CustomChipStyle"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            android:text="@string/chip_3"
            android:textAlignment="center" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_pets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"
        tools:listitem="@layout/item_row_user" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:clickable="true"
        android:contentDescription="@string/add_pets"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_add_24" />

</androidx.constraintlayout.widget.ConstraintLayout>