<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailForFavoriteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ScrollViewSize">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/detail_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/image_detail_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/dog" />

        </androidx.cardview.widget.CardView>



        <TextView
            android:id="@+id/detail_pets_uploaded_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="17dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="3sp"
            android:text="@string/detail_pets_uploaded_time"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/detail_pets_address"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <TextView
            android:id="@+id/detail_pets_address"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="3sp"
            android:maxLines="2"
            android:text="@string/detail_pets_location"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@+id/detail_pets_description"
            app:layout_constraintTop_toBottomOf="@+id/detail_pets_uploaded_time" />

        <TextView
            android:id="@+id/detail_pets_description"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:maxLines="11"
            android:text="@string/detail_pets_description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_pets_address" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/posted_by"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toStartOf="@+id/detail_pets_description"
            app:layout_constraintTop_toBottomOf="@+id/detail_pets_description" />

        <TextView
            android:id="@+id/detail_pets_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/detail_pets_user_post"
            android:textColor="@color/black"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>