<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="48dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_name"
            style="@style/HeaderText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/your_profile"
            android:textColor="@color/blue"
            app:layout_constraintEnd_toEndOf="@+id/logo"
            app:layout_constraintStart_toStartOf="@+id/logo"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ipt_nama"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_name"
            app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

            <id.med.helpets.ui.login.customview.EditTextWord
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_shape"
                android:backgroundTint="@color/abuabu"
                android:hint="@string/edt_nama"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="40dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ipt_email"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ipt_nama"
            app:layout_constraintTop_toBottomOf="@+id/ipt_nama"
            app:startIconDrawable="@drawable/ic_baseline_email_24">
            <id.med.helpets.ui.login.customview.EditTextEmail
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:hint="@string/edt_email"
                android:layout_height="match_parent"
                android:background="@drawable/layout_shape"
                android:backgroundTint="@color/abuabu"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ipt_nomor"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ipt_email"
            app:layout_constraintTop_toBottomOf="@+id/ipt_email"
            app:startIconDrawable="@drawable/ic_baseline_call_24">
            <id.med.helpets.ui.login.customview.EditTextWord
                android:id="@+id/edt_nomor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/layout_shape"
                android:backgroundTint="@color/abuabu"
                android:hint="@string/edt_nomor"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ipt_alamat"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ipt_nomor"
            app:layout_constraintTop_toBottomOf="@+id/ipt_nomor"
            app:startIconDrawable="@drawable/ic_baseline_location_on_24">
            <id.med.helpets.ui.login.customview.EditTextWord
                android:id="@+id/edt_alamat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/abuabu"
                android:background="@drawable/layout_shape"
                android:hint="@string/edt_alamat"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ipt_password"
            android:layout_width="340dp"
            android:layout_height="50dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/ipt_alamat"
            app:layout_constraintTop_toBottomOf="@+id/ipt_alamat"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">
            <id.med.helpets.ui.login.customview.EditTextPassword
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/edt_password"
                android:backgroundTint="@color/abuabu"
                android:background="@drawable/layout_shape"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/layout_shape"
            android:text="@string/update_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ipt_password" />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_marginStart="40dp"
            android:background="@drawable/layout_shape"
            android:text="@string/logout"
            app:layout_constraintBottom_toBottomOf="@+id/btn_update"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btn_update" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>