<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ScrollViewSize">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_detail_desc"
                android:scaleType="centerCrop"
                android:src="@drawable/dog" />

        </androidx.cardview.widget.CardView>

        <ToggleButton
            android:id="@+id/detail_save_pets"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="210dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/favorite_icon"
            android:gravity="bottom"
            android:textOff=""
            android:textOn=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail_pets_uploaded_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="17dp"
            android:layout_marginTop="8dp"
            android:lineSpacingExtra="3sp"
            android:text="@string/detail_pets_uploaded_time"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <TextView
            android:id="@+id/detail_pets_address"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginStart="17dp"
            android:layout_marginTop="4dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="3sp"
            android:maxLines="2"
            android:text="@string/detail_pets_location"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_pets_uploaded_time" />

        <TextView
            android:id="@+id/detail_pets_description"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:maxLines="7"
            android:text="@string/detail_pets_description"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_pets_address" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:lineSpacingExtra="4sp"
            android:text="@string/posted_by"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_pets_description" />

        <ImageView
            android:id="@+id/detail_pets_username_picture"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_account"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/detail_pets_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/detail_pets_user_post"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="19sp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_pets_username_picture"
            app:layout_constraintStart_toEndOf="@+id/detail_pets_username_picture"
            app:layout_constraintTop_toTopOf="@+id/detail_pets_username_picture" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>